# white-balancer-rs

./: .gitignore  Cargo.toml  README.md
src/: gray_retinex.rs  gray_world.rs  lib.rs  main.rs  math.rs  retinex.rs  traits.rs
src/auto/: gray_retinex.rs  gray_world.rs  methods.rs  mod.rs  retinex.rs  rgbimage.rs  traits.rs
src/image_ext/: imageformat.rs  math.rs  mod.rs  stats.rs  yuv.rs
src/math/: mod.rs  scale.rs
