[package]
name = "white-balancer"
version = "0.3.0"
authors = ["Warren Galyen <warrengalyen@github.com>"]
description = "Implementation of auto white balance methods"
homepage = "https://github.com/warrengalyen/white-balancer-rs"
repository = "https://github.com/warrengalyen/white-balancer-rs"
license = "MIT"
readme = "README.md"
keywords = ["image", "processing", "white", "balance"]

[dependencies]
clap = "2.33.3"
image = "0.23.12" 
nalgebra = "0.23.1"
num = "0.3.1"
num-traits = "0.2.14"
rand = "0.7.3"


